Orpie ChangeLog
------------------------------------------------------------------------

v1.1

   2004-04-10        Added a check for inversion of ill-conditioned
                     real matrices.

                     Implemented Mutt-like rcfile macros.


   2004-04-09        Added a configuration variable to enable
                     hiding the help panel.


v1.0

   2004-04-07        Version 1.0.2 release.  Added a manpage for
                     orpie-curses-keys(1).

   2004-04-05        Version 1.0.1 release.  Minor changes to the build
                     script, to assist in package creation (thanks to
                     Uwe Steinmann for the patch).

   2004-04-01        Version 1.0 release.



# arch-tag: DO_NOT_CHANGE_ca34c7fb-62b9-4953-ad3b-d846de94ac1f 