@@ -27,6 +27,9 @@
  * editor_lexer.mll to enter this data on the stack.
  *)
 
+
+let pi = 3.14159265358979323846;;
+
 type f_or_c = | F of float 
               | C of Complex.t
 
@@ -69,13 +72,110 @@ let decode_float_complex_matrix mat =
       Rpc_stack.RpcFloatMatrix (Gsl_matrix.of_arrays flt_array)
 
 
-let rect_of_polar r theta = 
+let rect_of_polar_rad r theta = 
    let real = r *. (cos theta)
    and imag = r *. (sin theta) in
    {Complex.re = real; Complex.im = imag}
 
+let rect_of_polar_deg r theta = 
+   let rad_theta = theta /. 180.0 *. pi in
+   rect_of_polar_rad r rad_theta
+
+
+(* convert an integer string to an RpcInt *)
+let decode_integer i_str =
+   Printf.fprintf stderr "integer: %s\n" i_str;
+   flush stderr;
+   let int_str = i_str in
+   let str_len = String.length int_str in
+   let digits  = Str.string_before int_str (str_len - 2) in
+   let int_val =
+     let base_char = int_str.[pred str_len] in
+     if base_char = 'b' then 
+        Big_int_str.big_int_of_string_base digits 2
+     else if base_char = 'o' then
+        Big_int_str.big_int_of_string_base digits 8
+     else if base_char = 'd' then
+        Big_int_str.big_int_of_string_base digits 10
+     else if base_char = 'h' then
+        Big_int_str.big_int_of_string_base digits 16
+     else 
+        let base_string = String.make 1 base_char in
+        raise (Utility.Txtin_error ("illegal base character " ^ base_string))
+   in
+   Rpc_stack.RpcInt int_val
+
+
+(* convert a floating point string to an RpcFloat *)
+let decode_float f_str =
+   Printf.fprintf stderr "FLOAT float string: '%s'\n" f_str;
+   flush stderr;
+   Printf.fprintf stderr "float: %g\n" (float_of_string f_str);
+   flush stderr;
+   Rpc_stack.RpcFloat (float_of_string f_str)
+
+
+(* convert a cartesian complex number string to an RpcComplex *)
+let decode_complex_rect re_str im_str =
+   Printf.fprintf stderr "COMPLEX1 float string: '%s'\n" re_str;
+   flush stderr;
+   Printf.fprintf stderr "COMPLEX2 float string: '%s'\n" im_str;
+   flush stderr;
+   let f1 = float_of_string re_str
+   and f2 = float_of_string im_str in
+   Printf.fprintf stderr "complex: (%g, %g)\n" f1 f2;
+   flush stderr;
+   Rpc_stack.RpcComplex {Complex.re = f1; Complex.im = f2}
+
+
+(* convert a polar representation complex number string to an
+ * RpcComplex.  The rect_of_polar argument should take care of
+ * any necessary degrees/radians conversion. *)
+let decode_complex_polar rect_of_polar mag_str ang_str = 
+   Printf.fprintf stderr "COMPLEX1 float string: '%s'\n" mag_str;
+   flush stderr;
+   Printf.fprintf stderr "COMPLEX2 float string: '%s'\n" ang_str;
+   flush stderr;
+   let mag = float_of_string mag_str
+   and ang = float_of_string ang_str in
+   Printf.fprintf stderr "complex: (%g <%g)\n" mag ang;
+   flush stderr;
+   Rpc_stack.RpcComplex (rect_of_polar mag ang)
+
+
+(* convert a polar representation complex number string to an
+ * RpcComplex.  Assumes radian representation of the angle. *)
+let decode_complex_polar_rad mag_str ang_str =
+   decode_complex_polar rect_of_polar_rad mag_str ang_str
+
+(* convert a polar representation complex number string to an
+ * RpcComplex.  Assumes degree representation of the angle. *)
+let decode_complex_polar_deg mag_str ang_str =
+   decode_complex_polar rect_of_polar_deg mag_str ang_str
+
+
+(* convert a matrix to an RpcFloatMatrix or an RpcComplexMatrix. *)
+let decode_matrix mat_rows =
+   (* matrix_rows is a list of rows, each of which
+    * is a list of elements; create a 2d array 
+    * from these lists, and generate the appropriate
+    * orpie_data from the 2d array. *)
+   Printf.fprintf stderr "matched matrix toplevel\n";
+   flush stderr;
+   let num_rows = List.length mat_rows in
+   let num_cols = List.length (List.hd mat_rows) in
+   let mat = Array.make_matrix num_rows num_cols (F 0.0) in
+   let temp_arr = Array.of_list (List.rev mat_rows) in
+   for i = 0 to pred num_rows do
+      mat.(i) <- Array.of_list (List.rev temp_arr.(i))
+   done;
+   (* create a float array or a complex array, depending
+    * on whether or not any complex types are present
+    * in this array. *)
+   decode_float_complex_matrix mat
 
 %}
+
 
 /* declarations */
 %token <string> INTEGER
@@ -88,133 +188,82 @@ let rect_of_polar r theta =
 %token ENDMATRIX
 %token EOF
 
-%start data_list
-%type <Rpc_stack.orpie_data list> data_list
+/* parse the input under the assumption that angles
+ * are provided using radian measure */
+%start decode_data_rad
+%type <Rpc_stack.orpie_data list> decode_data_rad
+
+/* parse the input under the assumption that angles
+ * are provided using degree measure */
+%start decode_data_deg
+%type <Rpc_stack.orpie_data list> decode_data_deg
 
 %%
 /* rules */
 
-data_list:
-   tokenlist EOF 
+/****************************************
+ * ANGLES PROVIDED USING RADIAN MEASURE *
+ ****************************************/
+decode_data_rad:
+   datalist_rad EOF 
       { List.rev $1 }
 ;
 
 
-tokenlist:
-   tokenlist tokengroup 
+datalist_rad:
+   datalist_rad datagroup_rad
       { $2 :: $1 }
    |  /* empty */
       { [] }
 ;
 
 
-tokengroup:
-   token
+datagroup_rad:
+   data_rad
       { $1 }
 ;
 
 
-token:
+data_rad:
    INTEGER 
-      { Printf.fprintf stderr "integer: %s\n" $1;
-        flush stderr;
-        let int_str = $1 in
-        let str_len = String.length int_str in
-        let digits  = Str.string_before int_str (str_len - 2) in
-        let int_val =
-           let base_char = int_str.[pred str_len] in
-           if base_char = 'b' then 
-              Big_int_str.big_int_of_string_base digits 2
-           else if base_char = 'o' then
-              Big_int_str.big_int_of_string_base digits 8
-           else if base_char = 'd' then
-              Big_int_str.big_int_of_string_base digits 10
-           else if base_char = 'h' then
-              Big_int_str.big_int_of_string_base digits 16
-           else 
-              let base_string = String.make 1 base_char in
-              raise (Utility.Txtin_error ("illegal base character " ^ base_string))
-        in
-        Rpc_stack.RpcInt int_val}
+      { decode_integer $1 }
 
    | FLOAT
-      { Printf.fprintf stderr "FLOAT float string: '%s'\n" $1;
-        flush stderr;
-        Printf.fprintf stderr "float: %g\n" (float_of_string $1);
-        flush stderr;
-        Rpc_stack.RpcFloat (float_of_string $1)} 
+      { decode_float $1 } 
 
    | BEGINCOMPLEX FLOAT SEPARATOR FLOAT ENDCOMPLEX
-      {
-         Printf.fprintf stderr "COMPLEX1 float string: '%s'\n" $2;
-         flush stderr;
-         Printf.fprintf stderr "COMPLEX2 float string: '%s'\n" $4;
-         flush stderr;
-         let f1 = float_of_string $2
-         and f2 = float_of_string $4 in
-         Printf.fprintf stderr "complex: (%g, %g)\n" f1 f2;
-         flush stderr;
-         Rpc_stack.RpcComplex {Complex.re = f1; Complex.im = f2}
-      }
+      { decode_complex_rect $2 $4 }
 
    | BEGINCOMPLEX FLOAT ANGLE FLOAT ENDCOMPLEX
-      {
-         Printf.fprintf stderr "COMPLEX1 float string: '%s'\n" $2;
-         flush stderr;
-         Printf.fprintf stderr "COMPLEX2 float string: '%s'\n" $4;
-         flush stderr;
-         let mag = float_of_string $2
-         and ang = float_of_string $4 in
-         Printf.fprintf stderr "complex: (%g <%g)\n" mag ang;
-         flush stderr;
-         Rpc_stack.RpcComplex (rect_of_polar mag ang)
-      }
+      { decode_complex_polar_rad $2 $4 }
 
-   | BEGINMATRIX matrix_rows ENDMATRIX
-      { 
-         (* matrix_rows is a list of rows, each of which
-          * is a list of elements; create a 2d array 
-          * from these lists, and generate the appropriate
-          * orpie_data from the 2d array. *)
-         Printf.fprintf stderr "matched matrix toplevel\n";
-         flush stderr;
-         let num_rows = List.length $2 in
-         let num_cols = List.length (List.hd $2) in
-         let mat = Array.make_matrix num_rows num_cols (F 0.0) in
-         let temp_arr = Array.of_list (List.rev $2) in
-         for i = 0 to pred num_rows do
-            mat.(i) <- Array.of_list (List.rev temp_arr.(i))
-         done;
-         (* create a float array or a complex array, depending
-          * on whether or not any complex types are present
-          * in this array. *)
-         decode_float_complex_matrix mat
-      }
+   | BEGINMATRIX matrix_rows_rad ENDMATRIX
+      { decode_matrix $2 }
 ;
 
 
-matrix_rows:
-   matrix_rows BEGINMATRIX matrix_row_elements ENDMATRIX
+matrix_rows_rad:
+   matrix_rows_rad BEGINMATRIX matrix_row_elements_rad ENDMATRIX
       {$3 :: $1}
    | /* empty */
       {[]}
 ;
 
 
-matrix_row_elements:
-   matrix_row_elements SEPARATOR FLOAT
+matrix_row_elements_rad:
+   matrix_row_elements_rad SEPARATOR FLOAT
       { (F (float_of_string $3)) :: $1 }
-   | matrix_row_elements SEPARATOR BEGINCOMPLEX FLOAT SEPARATOR FLOAT ENDCOMPLEX
+   | matrix_row_elements_rad SEPARATOR BEGINCOMPLEX FLOAT SEPARATOR FLOAT ENDCOMPLEX
       { 
          let f1 = float_of_string $4
          and f2 = float_of_string $6 in
          (C {Complex.re = f1; Complex.im = f2}) :: $1
       }
-   | matrix_row_elements SEPARATOR BEGINCOMPLEX FLOAT ANGLE FLOAT ENDCOMPLEX
+   | matrix_row_elements_rad SEPARATOR BEGINCOMPLEX FLOAT ANGLE FLOAT ENDCOMPLEX
       { 
          let r  = float_of_string $4
          and th = float_of_string $6 in
-         (C (rect_of_polar r th)) :: $1
+         (C (rect_of_polar_rad r th)) :: $1
       }
    | FLOAT
       { (F (float_of_string $1)) :: [] }
@@ -228,8 +277,171 @@ matrix_row_elements:
       {
          let r  = float_of_string $2
          and th = float_of_string $4 in
-         (C (rect_of_polar r th)) :: []
+         (C (rect_of_polar_rad r th)) :: []
       }
 ;
+
+
+
+
+decode_data_rad:
+   datalist_rad EOF 
+      { List.rev $1 }
+;
+
+
+datalist_rad:
+   datalist_rad datagroup_rad
+      { $2 :: $1 }
+   |  /* empty */
+      { [] }
+;
+
+
+datagroup_rad:
+   data_rad
+      { $1 }
+;
+
+
+data_rad:
+   INTEGER 
+      { decode_integer $1 }
+
+   | FLOAT
+      { decode_float $1 } 
+
+   | BEGINCOMPLEX FLOAT SEPARATOR FLOAT ENDCOMPLEX
+      { decode_complex_rect $2 $4 }
+
+   | BEGINCOMPLEX FLOAT ANGLE FLOAT ENDCOMPLEX
+      { decode_complex_polar_rad $2 $4 }
+
+   | BEGINMATRIX matrix_rows_rad ENDMATRIX
+      { decode_matrix $2 }
+;
+
+
+matrix_rows_rad:
+   matrix_rows_rad BEGINMATRIX matrix_row_elements_rad ENDMATRIX
+      {$3 :: $1}
+   | /* empty */
+      {[]}
+;
+
+
+matrix_row_elements_rad:
+   matrix_row_elements_rad SEPARATOR FLOAT
+      { (F (float_of_string $3)) :: $1 }
+   | matrix_row_elements_rad SEPARATOR BEGINCOMPLEX FLOAT SEPARATOR FLOAT ENDCOMPLEX
+      { 
+         let f1 = float_of_string $4
+         and f2 = float_of_string $6 in
+         (C {Complex.re = f1; Complex.im = f2}) :: $1
+      }
+   | matrix_row_elements_rad SEPARATOR BEGINCOMPLEX FLOAT ANGLE FLOAT ENDCOMPLEX
+      { 
+         let r  = float_of_string $4
+         and th = float_of_string $6 in
+         (C (rect_of_polar_rad r th)) :: $1
+      }
+   | FLOAT
+      { (F (float_of_string $1)) :: [] }
+   | BEGINCOMPLEX FLOAT SEPARATOR FLOAT ENDCOMPLEX
+      {
+         let f1 = float_of_string $2
+         and f2 = float_of_string $4 in
+         (C {Complex.re = f1; Complex.im = f2}) :: []
+      }
+   | BEGINCOMPLEX FLOAT ANGLE FLOAT ENDCOMPLEX
+      {
+         let r  = float_of_string $2
+         and th = float_of_string $4 in
+         (C (rect_of_polar_rad r th)) :: []
+      }
+;
+
+
+
+/****************************************
+ * ANGLES PROVIDED USING DEGREE MEASURE *
+ ****************************************/
+decode_data_deg:
+   datalist_deg EOF 
+      { List.rev $1 }
+;
+
+
+datalist_deg:
+   datalist_deg datagroup_deg
+      { $2 :: $1 }
+   |  /* empty */
+      { [] }
+;
+
+
+datagroup_deg:
+   data_deg
+      { $1 }
+;
+
+
+data_deg:
+   INTEGER 
+      { decode_integer $1 }
+
+   | FLOAT
+      { decode_float $1 } 
+
+   | BEGINCOMPLEX FLOAT SEPARATOR FLOAT ENDCOMPLEX
+      { decode_complex_rect $2 $4 }
+
+   | BEGINCOMPLEX FLOAT ANGLE FLOAT ENDCOMPLEX
+      { decode_complex_polar_deg $2 $4 }
+
+   | BEGINMATRIX matrix_rows_deg ENDMATRIX
+      { decode_matrix $2 }
+;
+
+
+matrix_rows_deg:
+   matrix_rows_deg BEGINMATRIX matrix_row_elements_deg ENDMATRIX
+      {$3 :: $1}
+   | /* empty */
+      {[]}
+;
+
+
+matrix_row_elements_deg:
+   matrix_row_elements_deg SEPARATOR FLOAT
+      { (F (float_of_string $3)) :: $1 }
+   | matrix_row_elements_deg SEPARATOR BEGINCOMPLEX FLOAT SEPARATOR FLOAT ENDCOMPLEX
+      { 
+         let f1 = float_of_string $4
+         and f2 = float_of_string $6 in
+         (C {Complex.re = f1; Complex.im = f2}) :: $1
+      }
+   | matrix_row_elements_deg SEPARATOR BEGINCOMPLEX FLOAT ANGLE FLOAT ENDCOMPLEX
+      { 
+         let r  = float_of_string $4
+         and th = float_of_string $6 in
+         (C (rect_of_polar_deg r th)) :: $1
+      }
+   | FLOAT
+      { (F (float_of_string $1)) :: [] }
+   | BEGINCOMPLEX FLOAT SEPARATOR FLOAT ENDCOMPLEX
+      {
+         let f1 = float_of_string $2
+         and f2 = float_of_string $4 in
+         (C {Complex.re = f1; Complex.im = f2}) :: []
+      }
+   | BEGINCOMPLEX FLOAT ANGLE FLOAT ENDCOMPLEX
+      {
+         let r  = float_of_string $2
+         and th = float_of_string $4 in
+         (C (rect_of_polar_deg r th)) :: []
+      }
+;
+
 
 /* arch-tag: DO_NOT_CHANGE_c65a2550-f00d-40f1-b51f-f5d654257785 */
